--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,42 @@
 <% include partials/header %>
 
-<div class="container">
-    <h1 class="text-center">My Boiler Plate</h1>
-    <% if (!isAuthenticated) { %>
+<div class="container main">
+    <h1 class="text-center">Stock App</h1>
     
-        <div class=" row text-center">
-            <div class="col-md-4 col-sm-0"></div>
-            <div class="col-md-2 col-sm-6">
-                <a class="btn btn-primary btn-block" href="/login">Login </a>
+    
+      <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+      <div id="chart_div"></div>
+    <hr>
+    
+    <div class="stocks">
+        <div class="row">
+
+        </div>
+    </div>
+    
+    <div class="row">
+        <div class="col-md-4 col-sm-3 col-xs-0"></div>
+        <div class="stock green col-md-4 col-sm-6 col-xs-12">
+            <div class="col-lg-8 col-md-8 col-sm-8">
+                <input type="text" id="name" class="form-control" placeholder="stock name">
             </div>
-            <div class="col-md-2 col-sm-6">
-                <a class="btn btn-success btn-block" href="/signup"> Signup</a>    
+            <div class="col-md-4 col-md-4 col-sm-4 text-center">
+                <button class="btn btn-sm btn-success" id="addStock">Add Stock</button>
             </div>
-            <div class="col-md-4 col-sm-0"></div>
+            
+            <div class="col-md-12 alert alert-danger text-center invisible" id="error">
+                
+            </div>
             
         </div>
-        
-    <% } %>
+        <div class="col-md-4 col-sm-3 col-xs-0"></div>
+    </div>
+
 </div>
-<script src="./js/site.js"></script>
+<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script> 
+<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+<script src="./js/chart.js"></script>
+<script src="./js/socketClient.js"></script>
+<script src="./js/index.js"></script>
 
 <% include partials/footer %>
