Added stocks are now placed directly before the 'add stock' div

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,10 +10,24 @@
     
     <div class="stocks">
         <div class="row">
-
+            <div class="addStock stock green col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-8 col-md-8 col-sm-8">
+                    <input type="text" id="name" class="form-control" placeholder="stock name">
+                </div>
+                <div class="col-md-4 col-md-4 col-sm-4 text-center">
+                    <button class="btn btn-sm btn-success" id="addStock">Add Stock</button>
+                </div>
+                
+                <div class="col-md-12 alert alert-danger text-center invisible" id="error">
+                    
+                </div>
+                
+            </div>
         </div>
     </div>
     
+    
+    <!--
     <div class="row">
         <div class="col-md-4 col-sm-3 col-xs-0"></div>
         <div class="stock green col-md-4 col-sm-6 col-xs-12">
@@ -31,6 +45,7 @@
         </div>
         <div class="col-md-4 col-sm-3 col-xs-0"></div>
     </div>
+    -->
 
 </div>
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script> 
