changed sizes of .stock containers and fixed size of error message

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,14 +11,14 @@
     <div class="stocks">
         <div class="row">
             <div class="addStock stock green col-md-4 col-sm-6 col-xs-12">
-                <div class="col-lg-8 col-md-8 col-sm-8">
+                <div class="col-lg-8 col-md-8 col-xs-8">
                     <input type="text" id="name" class="form-control" placeholder="stock name">
                 </div>
-                <div class="col-md-4 col-md-4 col-sm-4 text-center">
+                <div class="col-md-4 col-md-4 col-xs-4 text-center">
                     <button class="btn btn-sm btn-success" id="addStock">Add Stock</button>
                 </div>
                 
-                <div class="col-md-12 alert alert-danger text-center invisible" id="error">
+                <div class="col-md-12 col-xs-12 alert alert-danger text-center invisible" id="error">
                     
                 </div>
                 
