--- a/public/css/site.css
+++ b/public/css/site.css
@@ -10,8 +10,8 @@
 }
 
 .stock {
-    background: #ffffff;
-    min-height: 150px;
+    background: #fff;
+    min-height: 100px;
     border-left: 7px solid #ccc;
     border-right: 15px solid #333;
     margin-top: 10px;
@@ -23,7 +23,7 @@
 
 .green {
     border-left: 7px solid #5cb85c !important;
-    padding-top: 55px;
+    padding-top: 10px;
 }
 
 .green button {
@@ -63,6 +63,7 @@
 
 .alert {
     margin-top: 10px;
+    margin-bottom: 0;
     padding: 5px 10px;
 }
 
